<resources>
    <string name="app_name">BrandShopping</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="phone">Phone</string>
    <string name="arabic">Arabic</string>
    <string name="best_sellers">BEST SELLERS</string>
    <string name="show_more">Show More</string>
    <string name="new_collections">NEW COLLECTIONS</string>
    <string name="shop_by_brands">SHOP BY BRANDS</string>
    <string name="search_by_brand_category_product">Search by brand, category, product...</string>
    <string name="categories">CATEGORIES</string>
    <string name="favorites">FAVOURITES</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="remove">Remove</string>
    <string name="move_to_cart">Move to Cart</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="favourites_camel">Favorites</string>
    <string name="cart">Cart</string>
    <string name="cart_upper">CART</string>
    <string name="you">You</string>
    <string name="proceed_checkout">PROCEED CHECKOUT</string>
    <string name="grand_total">Grand Total</string>
    <string name="discount">Discount</string>
    <string name="sub_total">Sub Total</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="description">Description</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="view_cart">VIEW CART</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="account">ACCOUNT</string>
    <string name="account_camel">Account</string>
    <string name="orders">Orders</string>
    <string name="notification">Notification</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="shipping_address_cap">SHIPPING ADDRESS</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="change_password">Change Password</string>
    <string name="update_account">Update Account</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="empty_street">Street address is empty</string>
    <string name="empty_zone">Zone is empty</string>
    <string name="empty_building">Building number is empty</string>
    <string name="empty_name">Name is empty</string>
    <string name="empty_phone">Phone is empty</string>
    <string name="empty_password">Password is empty</string>
    <string name="empty_email">Email is empty</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="change_password_caps">CHANGE PASSWORD</string>
    <string name="address_name">Address Name</string>
    <string name="enter_address_name">Enter Address Name</string>
    <string name="street">Street</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="zone">Zone</string>
    <string name="enter_zone">Enter Zone</string>
    <string name="building_number">Building Number</string>
    <string name="enter_building_number">Enter Building Number</string>
    <string name="create">CREATE</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter Old Password</string>

    <string name="empty_old_password">Old password is empty</string>
    <string name="empty_new_password">New password is empty</string>
    <string name="empty_confirm_password">New password is empty</string>
    <string name="confirm_password_mismatch">Password does not match</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_confirm_new_password">Enter Confirm New Password</string>
    <string name="update_caps">UPDATE</string>
    <string name="shipping_address_title">SHIPPING ADDRESS</string>
    <string name="account_title">ACCOUNT</string>
    <string name="update_address">UPDATE ADDRESS</string>
    <string name="checkout">CHECKOUT</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="complete_order">COMPLETE ORDER</string>
    <string name="next">NEXT</string>
    <string name="select_address">SELECT ADDRESS</string>
    <string name="credit_card_no">Credit Card No</string>
    <string name="order_success_message">Order complete with ID: </string>
    <string name="filter">FILTER</string>
    <string name="add">Add</string>
    <string name="from_gallery">From Gallery</string>
    <string name="take_picture">Take Picture</string>
    <string name="order_no">Order No.:</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="camera_permission_will_be_only_used_to_take_your_profile_picture">Camera permission will be only used to take your profile picture</string>
    <string name="dismiss">dismiss</string>
    <string name="allow">allow</string>
    <string name="send">SEND</string>
    <string name="enter_registered_email">Enter registered email</string>
    <string name="copy">COPY</string>
    <string name="coupon_copied">Coupon copied to clipboard</string>
    <string name="clear_all">Clear all</string>
    <string name="brands">Brands</string>
    <string name="price">Price</string>
    <string name="low_to_high">Low to High</string>
    <string name="high_to_low">High to Low</string>
    <string name="coupon_code">COUPON CODE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>