<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/home" />
    <item
        android:id="@+id/selectCatFirst"
        android:icon="@drawable/ic_nav_cateories"
        android:title="@string/category" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_nav_favorites"
        android:title="@string/favourites_camel" />

    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_nav_cart"
        android:title="@string/cart" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_account"
        android:title="@string/you" />

</menu>