<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_bg"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/layForeground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:id="@+id/tvTitle"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/museo_sans_500"
                android:text="@string/camera_permission"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/museo_sans_300"
                android:text="@string/camera_permission_will_be_only_used_to_take_your_profile_picture"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDismiss"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="@string/dismiss"
                    android:visibility="gone"
                    android:layout_marginEnd="16dp"
                    app:cornerRadius="16dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnOk"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="@string/allow"
                    app:cornerRadius="16dp"
                    app:strokeColor="@color/teal_700"
                    app:strokeWidth="2dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>