<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.nads.shopping.R" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.nads.shopping.viewmodels.AccountViewModel" />
    </data>

    <RelativeLayout
        android:paddingBottom="56dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="72dp"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfilePic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="24dp"
                android:src="@{viewModel.profileLoadEvent.data.photo}"
                app:civ_circle_background_color="@color/teal_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/editProfilePic"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_edit_pic"
                app:layout_constraintBottom_toBottomOf="@+id/ivProfilePic"
                app:layout_constraintEnd_toEndOf="@+id/ivProfilePic" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="32dp"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivProfilePic">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user_profile"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/museo_sans_300"
                    android:gravity="bottom"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:paddingTop="32dp"
                    android:paddingEnd="24dp"
                    android:text="@={viewModel.profileLoadEvent.data.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView21">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_message"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/museo_sans_300"

                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:paddingTop="40dp"
                    android:paddingEnd="24dp"
                    android:text="@={viewModel.profileLoadEvent.data.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_phone_profile"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/museo_sans_300"
                    android:gravity="center_vertical"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:paddingStart="16dp"
                    android:paddingTop="40dp"
                    android:paddingEnd="24dp"
                    android:text="@={viewModel.profileLoadEvent.data.phone}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:boxBackgroundColor="@color/white"
                android:visibility="gone"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_calendar"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/museo_sans_300"
                    android:gravity="center_vertical"
                    android:hint="@string/date_of_birth"
                    android:inputType="phone"
                    android:paddingStart="16dp"
                    android:paddingTop="40dp"
                    android:paddingEnd="24dp"
                    android:text="@={viewModel.profileLoadEvent.data.dob}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                android:fontFamily="@font/museo_sans_300"
                android:text="@string/gender"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/tvGender"
                app:layout_constraintTop_toBottomOf="@+id/tvGender">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/gender_selector"
                    android:button="@null"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="@string/male"
                    app:useMaterialThemeColors="false" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/gender_selector"
                    android:button="@null"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:text="@string/female"
                    app:useMaterialThemeColors="false" />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChangePassword"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="32dp"
                android:visibility="gone"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="32dp"
                android:text="@string/change_password"
                android:textAllCaps="false"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

        <RelativeLayout
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/add__to_cart_btn_bg">

            <TextView
                style="@style/BottomButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingStart="24sp"
                android:gravity="center"
                android:paddingEnd="24sp"
                android:paddingBottom="16dp"
                android:text="@string/update_caps"
                android:textAllCaps="true"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutLoading"
            android:layout_width="match_parent"
            tools:visibility="gone"
            android:visibility="@{viewModel.loading}"
            android:layout_height="72dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_button_bg"
            >

            <ProgressBar
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:indeterminateTint="@color/white" />
        </RelativeLayout>

    </RelativeLayout>
</layout>