<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nads.shopping.viewmodels.AddressViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingBottom="56dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView11">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/museo_sans_300"
                        android:text="@string/address_name"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/white"
                        android:error="@{viewModel.nameError}"
                        android:fontFamily="@font/museo_sans_300"
                        android:hint="@string/enter_address_name"
                        android:minHeight="32dp"
                        android:text="@={viewModel.name}"
                        android:textSize="14sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView11">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/museo_sans_300"
                        android:text="@string/street"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/white"
                        android:error="@{viewModel.streetError}"
                        android:inputType="number"
                        android:fontFamily="@font/museo_sans_300"
                        android:hint="@string/enter_street_address"
                        android:minHeight="32dp"
                        android:text="@={viewModel.street}"
                        android:textSize="14sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView17">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/museo_sans_300"
                        android:text="@string/zone"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:inputType="number"
                        android:background="@color/white"
                        android:error="@{viewModel.zoneError}"
                        android:fontFamily="@font/museo_sans_300"
                        android:hint="@string/enter_zone"
                        android:minHeight="32dp"
                        android:text="@={viewModel.zone}"
                        android:textSize="14sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView18">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/museo_sans_300"
                        android:text="@string/building_number"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/white"
                        android:inputType="number"
                        android:error="@{viewModel.buildingError}"
                        android:fontFamily="@font/museo_sans_300"
                        android:hint="@string/enter_building_number"
                        android:minHeight="32dp"
                        android:text="@={viewModel.building}"
                        android:textSize="14sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layoutProceed"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/add__to_cart_btn_bg">

            <TextView
                style="@style/BottomButtonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingStart="24sp"
                android:paddingEnd="24sp"
                android:paddingBottom="16dp"
                android:text="@{viewModel.submitButtonText}"
                android:textAllCaps="true"
                android:textSize="16sp" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layoutLoading"
            android:layout_width="match_parent"
            tools:visibility="gone"
            android:visibility="@{viewModel.loading}"
            android:layout_height="72dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_button_bg"
            >

            <ProgressBar
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:indeterminateTint="@color/white" />
        </RelativeLayout>

    </RelativeLayout>
</layout>